# nx-achievements

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.1-dev.md
.github/workflows/: ci.yml  switch-build.yml
assets/: README.md
core/include/: Achievement.hpp  AchievementEngine.hpp  AchievementPack.hpp  Condition.hpp  PackLoader.hpp  ProfileStore.hpp  Version.hpp
core/src/: AchievementEngine.cpp  ConditionEvaluator.cpp  PackLoader.cpp  ProfileStore.cpp
docs/: architecture.md  assets.md  creating-achievement-packs.md  demo-checklist.md  forwarder.md  pack-format.md  project-identity.md  public-faq.md  release-archive-layout.md  release-checklist.md  roadmap.md  runtime-research.md  schema-versioning.md  security-and-scope.md  switch-build.md  switch-viewer-flow.md
examples/packs/: 0100000000000000.json
examples/packs/community/: unknown-fields.json  valid-larger.json  valid-minimal.json
examples/packs/invalid/: invalid-pack.json
examples/profiles/: unlocked.sample.json
switch-viewer/: Makefile
switch-viewer/source/: main.cpp
tests/: main.cpp  pack-validator-smoke.sh
tools/nxachievements-test/: main.cpp
tools/pack-validator/: main.cpp
